src/objects/smagicworkflow__Error_Log__c.object
<CustomObject>
    <description>This will track the errors/exception generated from workflow code.</description>
    <fields>
        <fullName>smagicworkflow__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Class_Name__c</fullName>
        <label>Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Error_Status_Code__c</fullName>
        <label>Error Status Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__Line_number__c</fullName>
        <label>Line number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicworkflow__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>smagicworkflow__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>smagicworkflow__Error_Message__c</columns>
        <columns>smagicworkflow__Error_Status_Code__c</columns>
        <columns>smagicworkflow__Class_Name__c</columns>
        <columns>smagicworkflow__Line_number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>